samples/_failures_safe/1761612978_c34eb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f2f1145.c: In function ‘main’:
./samples/SAFE/__tmp_2f2f1145.c:171:5: error: expected expression at end of input
  171 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_2f2f1145.c:171:5: error: expected declaration or statement at end of input
